OC-20 - Move cleanup logic into SegmentController
    Also cleans up the way Segments are initialized by the parsers